[package]
name = "epitls-pi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["clap_derive", "derive"] }
diff = "0.1.13"
glob = "0.3.0"
notify = "5.0.0"
notify-debouncer-mini = "0.2.1"
ron = "0.8.0"
serde = { version = "1.0.144", features = ["derive"] }
termion = "1.5.6"
tree-sitter = "0.20.9"
tree-sitter-c = "0.20.2"

[profile.release]
lto = true
