[package]
name = "epitls-pi"
version = "1.1.0"
edition = "2021"
license = "GPL-3.0+"
description = "A little helper tool meant to ease the developpment of the C piscine at EPITA/Toulouse."
repository = "https://github.com/MajorBarnulf/epitls-pi"
keywords = ["pi", "epita", "tls", "piscine"]
authors = ["JOLIMAITRE Matthieu <matthieu@imagevo.fr>"]
homepage = "https://github.com/MajorBarnulf/epitls-pi"

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "3.2", features = ["clap_derive", "derive"] }
diff = "0.1"
glob = "0.3"
notify = "5.0"
notify-debouncer-mini = "0.2"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
termion = "1.5"
# tree-sitter = "0.20"
# tree-sitter-c = "0.20"

[profile.release]
lto = true
